# Stugbokningssystem

./: Cargo.toml  README.md
src/: auth.rs  endpoints.rs  main.rs  models.rs
static/: index.html
