[package]
name = "stugbokningssystem"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
salvo = { version = "0.63.0", features = ["basic-auth", "logging", "test", "serve-static", "oapi"] }
tracing = "0.1"
tracing-subscriber = "0.3"

surrealdb = { version = "1.0.0", features = ["kv-mem"] }
once_cell = "1.19.0"
